@@ -1,3 +1,37 @@
+## utility for anova.FOO(), FOO in "lmlist", "glm", "glmlist"
+## depending on the ordering of the models this might get called with
+## negative deviance and df changes.
+stat.anova <- function(table, test=c("Chisq", "F", "Cp"), scale, df.scale, n)
+{
+    test <- match.arg(test)
+    dev.col <- match("Deviance", colnames(table))
+    if(is.na(dev.col)) dev.col <- match("Sum of Sq", colnames(table))
+    switch(test,
+	   "Chisq" = {
+               dfs <- table[, "Df"]
+               vals <- table[, dev.col]/scale * sign(dfs)
+	       vals[dfs %in% 0] <- NA
+               vals[!is.na(vals) & vals < 0] <- NA # rather than p = 0
+	       cbind(table,
+                     "P(>|Chi|)" = pchisq(vals, abs(dfs), lower.tail=FALSE)
+                     )
+	   },
+	   "F" = {
+               dfs <- table[, "Df"]
+	       Fvalue <- (table[, dev.col]/dfs)/scale
+	       Fvalue[dfs %in% 0] <- NA
+               Fvalue[!is.na(Fvalue) & Fvalue < 0] <- NA # rather than p = 0
+	       cbind(table,
+                     F = Fvalue,
+		     "Pr(>F)" = pf(Fvalue, abs(dfs), df.scale, lower.tail=FALSE)
+                     )
+	   },
+	   "Cp" = {
+	       cbind(table, Cp = table[,"Resid. Dev"] +
+		     2*scale*(n - table[,"Resid. Df"]))
+	   })
+}
+
 printCoefmat <-
     function(x, digits = max(3, getOption("digits") - 2),
 	     signif.stars = getOption("show.signif.stars"),
